# avconnect

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  readme.md
avconnect/mac_x64/: avconnect.xpl
cmake/: xplm.cmake
lib/: CMakeLists.txt
lib/mscript/: CMakeLists.txt  mscript_impl.h  op.x.h  parser.c  parser.h  parser_tokens.c
lib/mscript/mscript/: mscript.h
lib/serial/: CMakeLists.txt  enum_macos.c  serial.c
lib/serial/serial/: serial.h
src/: CMakeLists.txt  avconnect.c  avconnect.h  avconnect_cfg.c  cmd_ids.h  cmd_mgr.c  cmd_mgr.h  config.c  config.h  device.c  device.h  device_cfg.c  device_impl.h  device_input.c  device_output.c  main.c  settings.cpp  settings.h  str_buf.h  xplane.c  xplane.h
src/bindings/: inputs.h  outputs.h
src/demo/: CMakeLists.txt  cmd_mgr.c  cmd_mgr.h  main.c  str_buf.c  str_buf.h
src/utils/: buffers.c  buffers.h  cmd_mgr.c  cmd_mgr.h  str_buf.c
